--- a/projeto_i/index.html
+++ b/projeto_i/index.html
@@ -22,7 +22,7 @@
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://www.linkedin.com/in/jhonata-rafael-f-79468691/">Rafael Bortoletto</a>.
+    Coded by <a href="https://www.linkedin.com/in/jhonata-rafael-f-79468691/" target="_blank">Rafael Bortoletto</a>.
   </div>
 </body>
 </html>
