--- a/projeto_i/index.html
+++ b/projeto_i/index.html
@@ -1,29 +1,37 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="./css/style.css">
-  
+
   <title>Frontend Mentor | Stats preview card component</title>
 
 </head>
+
 <body>
+  <div class="primeira-parte">
+    <h1>Get <span>insights</span> that help your business grow.</h1>
 
-  <h1>Get insights that help your business grow.</h1>
+    <p class="main-paragraph">Discover the benefits of data analytics and make better decisions regarding revenue, customer
+      experience, and overall efficiency.</p>
 
-  <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer 
-  experience, and overall efficiency.</p>
-
-  10k+ companies
-  314 templates
-  12m+ queries
+    <p class="numeros">10k+</p> <p class="cont">companies</p>                  
+    <p class="numeros">314</p> <p class="cont">templates</p>
+    <p class="numeros">12m+</p> <p class="cont">queries</p>
+  </div>
+  <div class="img-work">
+    <img class="img" src="./images/image-header-desktop.jpg" alt="">
+  </div>
 
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="https://www.linkedin.com/in/jhonata-rafael-f-79468691/" target="_blank">Rafael Bortoletto</a>.
   </div>
 </body>
+
 </html>
