atualizei as fontes no css

--- a/projeto_i/index.html
+++ b/projeto_i/index.html
@@ -5,6 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- displays site properly based on user's device -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lexend+Deca&display=swap"
+    rel="stylesheet">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="./css/style.css">
@@ -14,24 +18,45 @@
 </head>
 
 <body>
-  <div class="primeira-parte">
-    <h1>Get <span>insights</span> that help your business grow.</h1>
+  <header>
 
-    <p class="main-paragraph">Discover the benefits of data analytics and make better decisions regarding revenue, customer
-      experience, and overall efficiency.</p>
+  </header>
 
-    <p class="numeros">10k+</p> <p class="cont">companies</p>                  
-    <p class="numeros">314</p> <p class="cont">templates</p>
-    <p class="numeros">12m+</p> <p class="cont">queries</p>
-  </div>
-  <div class="img-work">
-    <img class="img" src="./images/image-header-desktop.jpg" alt="">
-  </div>
+  <main>
+    <section>
+      <div class="primeira-parte">
+        <h1 class="main-heading">Get <span>insights</span> that help your business grow.</h1>
 
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="https://www.linkedin.com/in/jhonata-rafael-f-79468691/" target="_blank">Rafael Bortoletto</a>.
-  </div>
+        <p class="main-paragraph">Discover the benefits of data analytics and make better decisions regarding revenue,
+          customer
+          experience, and overall efficiency.</p>
+        <ul>
+          <li class="stat"><strong> 10k+</strong>
+            <p class="stat-heading">companies</p>
+          </li>
+          <li class="stat"><strong> 314</strong>
+            <p class="stat-heading"> templates</p>
+          </li>
+          <li class="stat"><strong> 12m+</strong>
+            <p class="stat-heading"> queries</p>
+          </li>
+        </ul>
+      </div>
+      <div class="segunda-parte">
+        <img class="img" src="./images/image-header-desktop.jpg" alt="">
+      </div>
+    </section>
+
+  </main>
+
+  <footer>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="https://www.linkedin.com/in/jhonata-rafael-f-79468691/" target="_blank">Rafael Bortoletto</a>.
+    </div>
+  </footer>
+
+
 </body>
 
 </html>
