--- a/projeto_i/index.html
+++ b/projeto_i/index.html
@@ -23,21 +23,21 @@
   </header>
 
   <main>
-    <section>
+    <section class="card-principal">
       <div class="primeira-parte">
         <h1 class="main-heading">Get <span>insights</span> that help your business grow.</h1>
 
         <p class="main-paragraph">Discover the benefits of data analytics and make better decisions regarding revenue,
           customer
           experience, and overall efficiency.</p>
-        <ul>
+        <ul class="lista">
           <li class="stat"><strong> 10k+</strong>
             <p class="stat-heading">companies</p>
           </li>
           <li class="stat"><strong> 314</strong>
             <p class="stat-heading"> templates</p>
           </li>
-          <li class="stat"><strong> 12m+</strong>
+          <li class="stat"><strong> 12M+</strong>
             <p class="stat-heading"> queries</p>
           </li>
         </ul>
