estilização no css
algumas mudanças no html e css para ficar mais próximo do layout

--- a/projeto_i/index.html
+++ b/projeto_i/index.html
@@ -30,31 +30,31 @@
         <p class="main-paragraph">Discover the benefits of data analytics and make better decisions regarding revenue,
           customer
           experience, and overall efficiency.</p>
-        <ul class="lista">
-          <li class="stat"><strong> 10k+</strong>
-            <p class="stat-heading">companies</p>
-          </li>
-          <li class="stat"><strong> 314</strong>
-            <p class="stat-heading"> templates</p>
-          </li>
-          <li class="stat"><strong> 12M+</strong>
-            <p class="stat-heading"> queries</p>
-          </li>
-        </ul>
+        <div class="lista">
+          <ul>
+            <li class="stat"><strong> 10k+</strong>
+              <p class="stat-heading">companies</p>
+            </li>
+            <li class="stat"><strong> 314</strong>
+              <p class="stat-heading"> templates</p>
+            </li>
+            <li class="stat"><strong> 12M+</strong>
+              <p class="stat-heading"> queries</p>
+            </li>
+          </ul>
+        </div>
       </div>
-      <div class="segunda-parte">
-        <img class="img" src="./images/image-header-desktop.jpg" alt="">
-      </div>
+      
     </section>
 
   </main>
 
   <footer>
-    <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="https://www.linkedin.com/in/jhonata-rafael-f-79468691/" target="_blank">Rafael Bortoletto</a>.
-    </div>
-  </footer>
+    <div class=" attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+        Coded by <a href="https://www.linkedin.com/in/jhonata-rafael-f-79468691/" target="_blank">Rafael Bortoletto</a>.
+      </div>
+      </footer>
 
 
 </body>
